tests/specs/ecosystem/std/archive/0_199_0.test
std/archive/0.199.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.199.0": "jsr:@std/internal@0.199.0"
    },
    "jsr": {
      "@std/internal@0.199.0": {
        "integrity": "c92e3568cfa22f0d63290e5f0959bbcff165cabf8bb806636671448248fe0be7"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMeta, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                ~~~~~~
    at file://<tmpdir>/untar.ts:10:81

error: Type checking failed.

